Update and rename B201 Computer Science Lab.html to index.html

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="container mx-auto p-4 sm:p-6 lg:p-8 max-w-4xl">
 
         <header class="bg-white shadow-lg rounded-lg p-6 mb-8 text-center">
-            <img src="My_Foto.jpeg" alt="Profil Resmi" class="rounded-full w-32 h-32 mx-auto mb-4 border-4 border-teal-500">
+            <img src="My_Foto.jpeg" alt="Profile Image" class="rounded-full w-32 h-32 mx-auto mb-4 border-4 border-teal-500">
             <h1 class="text-4xl font-bold text-teal-700 mb-2">Meric Olcan POLAT</h1>
             <p class="text-xl text-gray-600">Software Engineer Student</p>
         </header>
 
-        <section id="hakkimda" class="bg-white shadow-lg rounded-lg p-6 mb-8">
+        <section id="Aboutme" class="bg-white shadow-lg rounded-lg p-6 mb-8">
             <h2 class="text-3xl font-semibold text-teal-600 mb-4 border-b-2 border-teal-300 pb-2">About Me</h2>
             <p class="text-gray-700 leading-relaxed mb-4">
                 Hello! I'm Meric Olcan POLAT. I am a student in Gisma Univesity. This portfolio is designed to showcase my technical structure and capabilities. I am passionate about software development, data analysis and problem solving.
