--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container mx-auto p-4 sm:p-6 lg:p-8 max-w-4xl">
 
         <header class="bg-white shadow-lg rounded-lg p-6 mb-8 text-center">
-            <img src="My_Foto.jpeg" alt="Profile Image" class="rounded-full w-32 h-32 mx-auto mb-4 border-4 border-teal-500">
+            <img src="profilephoto.jpeg" alt="Profile Image" class="rounded-full w-32 h-32 mx-auto mb-4 border-4 border-teal-500">
             <h1 class="text-4xl font-bold text-teal-700 mb-2">Meric Olcan POLAT</h1>
             <p class="text-xl text-gray-600">Software Engineer Student</p>
         </header>
